correcciones para nube

--- a/public/layouts/app.html
+++ b/public/layouts/app.html
@@ -7,7 +7,7 @@
 
   <base href="/" />
 
-  <link rel="stylesheet" href="/public/assets/app.css" />
+  <link rel="stylesheet" href="/tf_farmacia_frontend/public/assets/app.css" />
 </head>
 <body class="bg-gray-50 text-gray-900 antialiased">
   <div class="min-h-dvh">
@@ -30,6 +30,6 @@
     document.getElementById('y').textContent = new Date().getFullYear();
   </script>
 
-  <script type="module" src="/src/index.js"></script>
+  <script type="module" src="/tf_farmacia_frontend/src/index.js"></script>
 </body>
 </html>
